--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         and Qt device independent pixels. -->
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=0"/>
 
-    <title>stereoqopenglwidget</title>
+    <title>MiniTalker</title>
     <style>
       /* Make the html body cover the entire (visual) viewport with no scroll bars. */
       html, body { padding: 0; margin: 0; overflow: hidden; height: 100% }
@@ -20,13 +20,13 @@
     <figure style="overflow:visible;" id="qtspinner">
       <center style="margin-top:1.5em; line-height:150%">
         <img src="qtlogo.svg" width="320" height="200" style="display:block"></img>
-        <strong>Qt for WebAssembly: stereoqopenglwidget</strong>
+        <strong>Qt for WebAssembly: MiniTalker</strong>
         <div id="qtstatus"></div>
         <noscript>JavaScript is disabled. Please enable JavaScript to use this application.</noscript>
       </center>
     </figure>
     <div id="screen"></div>
-    <script src="coi-serviceworker.js"></script>
+
     <script type="text/javascript">
         async function init()
         {
@@ -68,7 +68,8 @@
             }
         }
     </script>
-    <script src="stereoqopenglwidget.js"></script>
+    <script src="coi-serviceworker.js"></script>
+    <script src="MiniTalker.js"></script>
     <script type="text/javascript" src="qtloader.js"></script>
   </body>
 </html>
