--- a/MiniTalker.html
+++ b/MiniTalker.html
@@ -68,6 +68,7 @@
             }
         }
     </script>
+    <script src="coi-serviceworker.js"></script>
     <script src="MiniTalker.js"></script>
     <script type="text/javascript" src="qtloader.js"></script>
   </body>
