--- a/MiniTalker.html
+++ b/MiniTalker.html
@@ -68,7 +68,7 @@
             }
         }
     </script>
-    <script src="enable-threads.js"></script>
+    <script src="sab-instead.js"></script>
     <script src="MiniTalker.js"></script>
     <script type="text/javascript" src="qtloader.js"></script>
   </body>
