--- a/MiniTalker.html
+++ b/MiniTalker.html
@@ -9,24 +9,24 @@
         and Qt device independent pixels. -->
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=0"/>
 
-    <title>MiniTalker</title>
+    <title>facemesh_matting</title>
     <style>
       /* Make the html body cover the entire (visual) viewport with no scroll bars. */
       html, body { padding: 0; margin: 0; overflow: hidden; height: 100% }
-      #screen { width: 100%; height: 100%; }
+      #screen { width: 100%; height: 93%; }
     </style>
   </head>
   <body onload="init()">
     <figure style="overflow:visible;" id="qtspinner">
       <center style="margin-top:1.5em; line-height:150%">
-        <img src="qtlogo.svg" width="320" height="200" style="display:block"></img>
-        <strong>Qt for WebAssembly: MiniTalker</strong>
+        <img src="logo.png" width="320" height="200" style="display:block"></img>
+        <strong>MiniTalker: 1.0</strong>
         <div id="qtstatus"></div>
         <noscript>JavaScript is disabled. Please enable JavaScript to use this application.</noscript>
       </center>
     </figure>
     <div id="screen"></div>
-    <script src="sab-instead.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.3/pako.min.js"></script>
     <script type="text/javascript">
         async function init()
         {
@@ -68,7 +68,8 @@
             }
         }
     </script>
-    <script src="MiniTalker.js"></script>
+    <script src="mediapipe_facemesh.js"></script>
     <script type="text/javascript" src="qtloader.js"></script>
+    <iframe src="AAA2.html" id="myframe" width="100%"></iframe>
   </body>
 </html>
