--- a/MiniTalker.html
+++ b/MiniTalker.html
@@ -9,7 +9,7 @@
         and Qt device independent pixels. -->
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=0"/>
 
-    <title>facemesh_matting</title>
+    <title>MiniTalker</title>
     <style>
       /* Make the html body cover the entire (visual) viewport with no scroll bars. */
       html, body { padding: 0; margin: 0; overflow: hidden; height: 100% }
@@ -26,7 +26,6 @@
       </center>
     </figure>
     <div id="screen"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.3/pako.min.js"></script>
     <script type="text/javascript">
         async function init()
         {
@@ -68,7 +67,7 @@
             }
         }
     </script>
-    <script src="mediapipe_facemesh.js"></script>
+    <script src="MiniTalker.js"></script>
     <script type="text/javascript" src="qtloader.js"></script>
     <iframe src="AAA2.html" id="myframe" width="100%"></iframe>
   </body>
