--- a/speech.html
+++ b/speech.html
@@ -70,6 +70,9 @@
                 updateIndicatorColor();
             }
         });
+        recognition.onerror = event => {
+            console.error('Error occurred in recognition:', event.error);
+        };
         recognition.onend = event => {
             started = false;
             updateIndicatorColor();
