--- a/speech.html
+++ b/speech.html
@@ -72,7 +72,7 @@
 
         if (recognition) {
           console.log('Web Speech API is supported in this browser.');
-          document.getElementById('transcript').innerHTML = "<b>Browser does support Speech API. Please download latest chrome.<b>";
+          document.getElementById('transcript').innerHTML = "<b>Browser does support Speech API.<b>";
           recognition = new recognition();
         } else {
           console.log('Web Speech API is not supported in this browser.');
